fixed alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ a:hover {
     font-weight: bold;
     font-size: 80%;
     padding: 0% 7% 0% 7%; 
+    text-align: left;
 }
 
 #answer {
@@ -84,6 +85,7 @@ a:hover {
     font-family: 'League Spartan Bold', arial;
     font-size: 50%;
     padding: 0% 7% 0% 7%; 
+    text-align: left;
 }
 #avatar{
     float: left;
